apps/development/bandung-coffeeshop-be/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: bandung-coffeeshop-be
  labels:
    app: bandung-coffeeshop-be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bandung-coffeeshop-be
  template:
    metadata:
      labels:
        app: bandung-coffeeshop-be
    spec:
      containers:
        - name: bandung-coffeeshop-be
          image: ghcr.io/dta32/bandung-coffeeshop-be/dev:1790684489-e8363d5 # {"$imagepolicy": "flux-system:bandung-coffeeshop-be-dev"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7005
          readinessProbe:
            httpGet:
              path: /health
              port: 7005
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 7005
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
